// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `"Header"`;

exports[`Header Element render() should render correctly 1`] = `
Object {
  "input": undefined,
  "props": Object {
    "htmlAttributes": Object {
      "someAttr": "hello",
    },
    "id": "header",
    "label": "Hello World",
  },
  "type": Object {
    "render": [Function],
    "type": "Header",
    "valid": [Function],
    "value": [Function],
  },
  "wrapper": <h2
    id="dialog-header"
    someattr="hello"
  >
    Hello World
  </h2>,
}
`;

exports[`Header Element render() should render correctly 2`] = `
Object {
  "input": undefined,
  "props": Object {
    "id": "noHTML",
  },
  "type": Object {
    "render": [Function],
    "type": "Header",
    "valid": [Function],
    "value": [Function],
  },
  "wrapper": <h2
    id="dialog-noHTML"
  >
    undefined
  </h2>,
}
`;
